<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Alarm Panel</string>
    <string name="default_alarm_status"></string>
    <string name="enter_code_description">Enter code to confirm</string>
    <string name="full">Arm full</string>
    <string name="partial">Arm partial</string>
    <string name="perimeter">Arm perimeter</string>
    <string name="settings">Settings</string>
    <string name="preferences_phone_number_title">Phone Number</string>
    <string name="preferences_phone_number_summary">Please provide a phone number for your alarm system</string>
    <string name="disarm">Disarm</string>
    <string name="status">Status</string>
    <string name="select_command_description">Select command to send to alarm</string>

</resources>