<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_command_description" />

    <Button
        android:id="@+id/buttonFull"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/full" />

    <Button
        android:id="@+id/buttonPartial"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/partial" />

    <Button
        android:id="@+id/buttonPerimeter"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/perimeter" />

    <Button
        android:id="@+id/buttonDisarm"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/disarm" />

    <Button
        android:id="@+id/buttonStatus"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/status" />

</LinearLayout>